fix layout issue in prototype_new_page

--- a/app/assets/stylesheets/protospace.css.scss
+++ b/app/assets/stylesheets/protospace.css.scss
@@ -471,6 +471,11 @@ body {
         filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
         cursor: pointer;
       }
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
     }
 
     .image-upload-plus {
